--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "Influencer Cloud Project",
   "main": "pages/form.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next",
-    "start": "next",
-    "build": "next build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mysql": "^2.18.1",
     "@babel/core": "^7.11.6",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "next": "^9.5.2",
+    "pg": "^8.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
